--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -23,9 +24,9 @@
     <p>Click the button below to see your security answers before confirmation</p>
    
 
-    <button onclick="firstOutput()">First Answer</button>
-    <button onclick="secondOutput()">Second Answer</button>
-    <button onclick="thirdOutput()">Third Answer</button>
+    <p><button onclick="firstOutput()">First Answer</button></p>
+    <p><button onclick="secondOutput()">Second Answer</button></p>
+    <p><button onclick="thirdOutput()">Third Answer</button></p>
 
     <h2 id="QA"></h2>
 
